--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
   },
   "dependencies": {
     "apisauce": "^3.0.1",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "next": "14.0.3",
     "next-redux-wrapper": "^8.1.0",
+    "next-remove-imports": "^1.0.12",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-js-loader": "^0.1.3",
     "react-loader-spinner": "^5.4.5",
     "react-responsive": "^9.0.2",
     "styled-components": "^6.1.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
