--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "apisauce": "^3.0.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
-    "formik": "^2.4.5",
+    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "next": "14.0.3",
@@ -25,8 +25,9 @@
     "react-js-loader": "^0.1.3",
     "react-loader-spinner": "^5.4.5",
     "react-responsive": "^9.0.2",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.1",
-    "yup": "^1.3.2"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
